# ffmpeg_sdl2_demo

./: CMakeLists.txt  README.md
ffmpeg/: FFmpeg_video_decode.cpp  ffplay.c  main.cpp  main2.cpp
sdl2/: main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
